Branding: Update subtitle to 'Die Villa Kunterbunt Anthologie' across indices

--- a/core/data/cowork/podcast/index.html
+++ b/core/data/cowork/podcast/index.html
@@ -344,7 +344,7 @@
     <div class="main-container">
         <header>
             <h1>Villa Kunterbunt Cowork</h1>
-            <div class="subtitle">Villa Kunterbunt Anthologie</div>
+            <div class="subtitle">Die Villa Kunterbunt Anthologie</div>
 
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="../../main/podcast/index.html" class="action-link">🏰 Zum Haupt Podcast</a>
