--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -344,7 +344,7 @@
     <div class="main-container">
         <header>
             <h1>Villa Kunterbunt Meta Podcast</h1>
-            <div class="subtitle">Villa Kunterbunt Kompendium</div>
+            <div class="subtitle">Das Villa Kunterbunt Kompendium</div>
 
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="../../main/podcast/index.html" class="action-link">🏰 Zum Haupt Podcast</a>
