Branding: Unify H1 titles to 'Die Villa Kunterbunt' across all indices

--- a/core/data/cowork/podcast/index.html
+++ b/core/data/cowork/podcast/index.html
@@ -343,7 +343,7 @@
     <div class="ambient-bg"></div>
     <div class="main-container">
         <header>
-            <h1>Villa Kunterbunt Cowork</h1>
+            <h1>Die Villa Kunterbunt</h1>
             <div class="subtitle">Die Villa Kunterbunt Anthologie</div>
 
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
