--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -343,8 +343,8 @@
     <div class="ambient-bg"></div>
     <div class="main-container">
         <header>
-            <h1>Villa Kunterbunt Meta Podcast</h1>
-            <div class="subtitle">Das Villa Kunterbunt Kompendium</div>
+            <h1>Die Villa Kunterbunt</h1>
+            <div class="subtitle">Das Kompendium</div>
 
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="../../main/podcast/index.html" class="action-link">🏰 Zum Haupt Podcast</a>
