Branding: Simplify subtitles to 'Die Anthologie' and 'Das Kompendium'

--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -419,7 +419,7 @@
     <div class="main-container">
         <header>
             <h1>Die Villa Kunterbunt</h1>
-            <div class="subtitle">Die Villa Kunterbunt Anthologie</div>
+            <div class="subtitle">Die Anthologie</div>
 
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="../../meta/podcast/index.html" class="action-link">🎙️ Zum Meta Podcast</a>
