Branding: Unify series names to 'Das Epos', 'Das Kompendium', and 'Die Anthologie' across all buttons and titles

--- a/core/data/cowork/podcast/abook.html
+++ b/core/data/cowork/podcast/abook.html
@@ -332,8 +332,8 @@
             <div class="subtitle">Villa Kunterbunt Cowork</div>
             <h1>Episode VI - aBook</h1>
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
-                <a href="../../main/podcast/index.html" class="action-link">🏰 Zum Haupt Podcast</a>
-                <a href="../../meta/podcast/index.html" class="action-link">🎙️ Zum Meta Podcast</a>
+                <a href="../../main/podcast/index.html" class="action-link">🏰 Das Epos</a>
+                <a href="../../meta/podcast/index.html" class="action-link">🎙️ Das Kompendium</a>
             </div>
         </header>
 
