--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -347,8 +347,8 @@
             <div class="subtitle">Das Kompendium</div>
 
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
-                <a href="../../main/podcast/index.html" class="action-link">🏰 Zum Haupt Podcast</a>
-                <a href="../../cowork/podcast/index.html" class="action-link">🎧 Zum Cowork Podcast</a>
+                <a href="../../main/podcast/index.html" class="action-link">🏰 Das Epos</a>
+                <a href="../../cowork/podcast/index.html" class="action-link">🎧 Die Anthologie</a>
             </div>
         </header>
 
