--- a/core/data/cowork/podcast/index.html
+++ b/core/data/cowork/podcast/index.html
@@ -347,8 +347,8 @@
             <div class="subtitle">Die Anthologie</div>
 
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
-                <a href="../../main/podcast/index.html" class="action-link">🏰 Zum Haupt Podcast</a>
-                <a href="../../meta/podcast/index.html" class="action-link">🎙️ Zum Meta Podcast</a>
+                <a href="../../main/podcast/index.html" class="action-link">🏰 Das Epos</a>
+                <a href="../../meta/podcast/index.html" class="action-link">🎙️ Das Kompendium</a>
             </div>
         </header>
 
