--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -419,11 +419,11 @@
     <div class="main-container">
         <header>
             <h1>Die Villa Kunterbunt</h1>
-            <div class="subtitle">Die Anthologie</div>
+            <div class="subtitle">Das Epos</div>
 
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
-                <a href="../../meta/podcast/index.html" class="action-link">🎙️ Zum Meta Podcast</a>
-                <a href="../../cowork/podcast/index.html" class="action-link">🎧 Zum Cowork Podcast</a>
+                <a href="../../meta/podcast/index.html" class="action-link">🎙️ Das Kompendium</a>
+                <a href="../../cowork/podcast/index.html" class="action-link">🎧 Die Anthologie</a>
             </div>
         </header>
 
