--- a/core/data/main/podcast/satire.html
+++ b/core/data/main/podcast/satire.html
@@ -361,8 +361,8 @@
             <div class="subtitle">Die Villa Kunterbunt</div>
             <h1>Die Satire</h1>
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
-                <a href="../../meta/podcast/index.html" class="action-link">🎙️ Zum Meta Podcast</a>
-                <a href="../../cowork/podcast/index.html" class="action-link">🎧 Zum Cowork Podcast</a>
+                <a href="../../meta/podcast/index.html" class="action-link">🎙️ Das Kompendium</a>
+                <a href="../../cowork/podcast/index.html" class="action-link">🎧 Die Anthologie</a>
             </div>
         </header>
 
