Branding: Finalize visual unification across all pages and update CHANGELOG

--- a/core/data/cowork/podcast/abook.html
+++ b/core/data/cowork/podcast/abook.html
@@ -329,8 +329,8 @@
 
     <div class="main-container">
         <header>
-            <div class="subtitle">Villa Kunterbunt Cowork</div>
-            <h1>Episode VI - aBook</h1>
+            <h1>Die Villa Kunterbunt</h1>
+            <div class="subtitle">Die Anthologie | Episode VI - aBook</div>
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="../../main/podcast/index.html" class="action-link">🏰 Das Epos</a>
                 <a href="../../meta/podcast/index.html" class="action-link">🎙️ Das Kompendium</a>
