--- a/core/data/main/podcast/dossier.html
+++ b/core/data/main/podcast/dossier.html
@@ -371,8 +371,8 @@
 
     <div class="main-container">
         <header>
-            <div class="subtitle">Die Villa Kunterbunt</div>
-            <h1>Das Dossier</h1>
+            <h1>Die Villa Kunterbunt</h1>
+            <div class="subtitle">Das Epos | Das Dossier</div>
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="../../meta/podcast/index.html" class="action-link">🎙️ Das Kompendium</a>
                 <a href="../../cowork/podcast/index.html" class="action-link">🎧 Die Anthologie</a>
