--- a/core/data/meta/podcast/korrespondenz_system_analyse.html
+++ b/core/data/meta/podcast/korrespondenz_system_analyse.html
@@ -329,8 +329,8 @@
 
     <div class="main-container">
         <header>
-            <div class="subtitle">Villa Kunterbunt Meta Podcast</div>
-            <h1>Korrespondenz System Analyse</h1>
+            <h1>Die Villa Kunterbunt</h1>
+            <div class="subtitle">Das Kompendium | Korrespondenz System Analyse</div>
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="../../main/podcast/index.html" class="action-link">🏰 Das Epos</a>
                 <a href="../../cowork/podcast/index.html" class="action-link">🎧 Die Anthologie</a>
