chore: update thumbs paths and UI in cowork and meta directories

--- a/core/data/cowork/podcast/index.html
+++ b/core/data/cowork/podcast/index.html
@@ -346,6 +346,7 @@
             <h1>Die Villa Kunterbunt</h1>
             <div class="subtitle">Die Anthologie</div>
 
+
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                 <a href="../../main/podcast/index.html" class="action-link">🏰 Das Epos</a>
                 <a href="../../meta/podcast/index.html" class="action-link">🎙️ Das Kompendium</a>
@@ -358,24 +359,46 @@
                 <div class="cover-flip-container" onclick="this.classList.toggle('flipped')">
                     <div class="flipper">
                         <div class="front">
-                            <img src="../images/die_villa_kunterbunt_anthologie_audiobook_cover_back.png"
+                            <img src="../images/thumbs/die_villa_kunterbunt_anthologie_audiobook_cover_back_thumb.png"
                                 alt="Front Cover">
                         </div>
                         <div class="back">
-                            <img src="../images/thumbs/die_villa_kunterbunt_anthologie_podcast_thumb.png" alt="Back Cover">
+                            <img src="../images/thumbs/die_villa_kunterbunt_anthologie_podcast_thumb.png"
+                                alt="Back Cover">
                         </div>
                     </div>
                 </div>
                 <div class="episode-content">
                     <div class="episode-tag">Cowork Podcast</div>
                     <h2 class="episode-title">Episode VI - aBook</h2>
+
+                    <div class="info-bar">
+                        <button class="info-btn" onclick="toggleInfo(1)">TTS</button>
+                        <button class="info-btn source-btn no-source" onclick="openSource('')">Quelle</button>
+                    </div>
+
+                    <div id="info-text-1" class="info-text">
+                        Die Audioinhalte wurden mittels Text-to-Speech-Synthese (TTS) generiert. Als Datengrundlage
+                        dienen strukturierte Markdown-Skripte.
+                    </div>
+
                     <div class="episode-description">
                         Die sechste Episode als Hörbuch. Ein <strong>Cowork Podcast</strong> aus dem Coworking Space.
                     </div>
                     <div class="player-controls">
+                        <button class="control-btn" onclick="skip(1, -30)" title="-30s">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M11 18V6l-8.5 6 8.5 6zm.5-6l8.5 6V6l-8.5 6z" />
+                            </svg>
+                        </button>
                         <button class="play-btn" onclick="togglePlay(1)" id="play-btn-1" aria-label="Play Episode 1">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M8 5v14l11-7z" />
+                            </svg>
+                        </button>
+                        <button class="control-btn" onclick="skip(1, 30)" title="+30s">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M4 18l8.5-6L4 6v12zm9-12v12l8.5-6L13 6z" />
                             </svg>
                         </button>
                         <div class="progress-wrapper">
@@ -386,6 +409,10 @@
                                 <span id="current-time-1">0:00</span>
                                 <span id="duration-1">0:00</span>
                             </div>
+                        </div>
+                        <div class="volume-control">
+                            <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="1"
+                                oninput="setVolume(1, this.value)">
                         </div>
                     </div>
                     <audio id="audio-player-1" src="../audio/villa_kunterbunt_episode_vi_abook.mp3"
@@ -451,6 +478,27 @@
             const min = Math.floor(seconds / 60);
             const sec = Math.floor(seconds % 60);
             return `${min}:${sec < 10 ? '0' : ''}${sec}`;
+        }
+
+        function skip(id, seconds) {
+            const audio = document.getElementById(`audio-player-${id}`);
+            audio.currentTime += seconds;
+        }
+
+        function setVolume(id, value) {
+            const audio = document.getElementById(`audio-player-${id}`);
+            audio.volume = value;
+        }
+
+        function toggleInfo(id) {
+            const infoText = document.getElementById(`info-text-${id}`);
+            infoText.classList.toggle('visible');
+        }
+
+        function openSource(url) {
+            if (url) {
+                window.open(url, '_blank');
+            }
         }
 
         function togglePlay(id) {
