fix(ui): swap flip images in meta and fix button alignment in main

--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -552,7 +552,8 @@
                             <img src="../images/thumbs/die_villa_kunterbunt_podcast_thumb.png" alt="Front Cover">
                         </div>
                         <div class="back">
-                            <img src="../images/thumbs/die_villa_kunterbunt_abook_cover_back_thumb.png" alt="Back Cover">
+                            <img src="../images/thumbs/die_villa_kunterbunt_abook_cover_back_thumb.png"
+                                alt="Back Cover">
                         </div>
                     </div>
                 </div>
@@ -615,9 +616,9 @@
                     </div>
                     <audio id="audio-player-1" src="../audio/villa_kunterbunt_satire_podcast.mp3"
                         preload="metadata"></audio>
-                </div>
-                <div style="margin-top: 15px; text-align: right;">
-                    <a href="satire.html" class="action-link">Zur Folge</a>
+                    <div style="margin-top: 15px; text-align: right;">
+                        <a href="satire.html" class="action-link">Zur Folge</a>
+                    </div>
                 </div>
             </article>
 
@@ -629,7 +630,8 @@
                             <img src="../images/thumbs/die_villa_kunterbunt_podcast_thumb.png" alt="Front Cover">
                         </div>
                         <div class="back">
-                            <img src="../images/thumbs/die_villa_kunterbunt_abook_cover_back_thumb.png" alt="Back Cover">
+                            <img src="../images/thumbs/die_villa_kunterbunt_abook_cover_back_thumb.png"
+                                alt="Back Cover">
                         </div>
                     </div>
                 </div>
@@ -691,9 +693,9 @@
                     </div>
                     <audio id="audio-player-2" src="../audio/villa_kunterbunt_analyse_podcast.mp3"
                         preload="metadata"></audio>
-                </div>
-                <div style="margin-top: 15px; text-align: right;">
-                    <a href="analyse.html" class="action-link">Zur Folge</a>
+                    <div style="margin-top: 15px; text-align: right;">
+                        <a href="analyse.html" class="action-link">Zur Folge</a>
+                    </div>
                 </div>
             </article>
 
@@ -706,7 +708,8 @@
                             <img src="../images/thumbs/die_villa_kunterbunt_podcast_thumb.png" alt="Front Cover">
                         </div>
                         <div class="back">
-                            <img src="../images/thumbs/die_villa_kunterbunt_abook_cover_back_thumb.png" alt="Back Cover">
+                            <img src="../images/thumbs/die_villa_kunterbunt_abook_cover_back_thumb.png"
+                                alt="Back Cover">
                         </div>
                     </div>
                 </div>
@@ -768,9 +771,9 @@
                     </div>
                     <audio id="audio-player-3" src="../audio/villa_kunterbunt_dossier_podcast.mp3"
                         preload="metadata"></audio>
-                </div>
-                <div style="margin-top: 15px; text-align: right;">
-                    <a href="dossier.html" class="action-link">Zur Folge</a>
+                    <div style="margin-top: 15px; text-align: right;">
+                        <a href="dossier.html" class="action-link">Zur Folge</a>
+                    </div>
                 </div>
             </article>
 
@@ -782,7 +785,8 @@
                             <img src="../images/thumbs/die_villa_kunterbunt_podcast_thumb.png" alt="Front Cover">
                         </div>
                         <div class="back">
-                            <img src="../images/thumbs/die_villa_kunterbunt_abook_cover_back_thumb.png" alt="Back Cover">
+                            <img src="../images/thumbs/die_villa_kunterbunt_abook_cover_back_thumb.png"
+                                alt="Back Cover">
                         </div>
                     </div>
                 </div>
@@ -844,9 +848,9 @@
                     </div>
                     <audio id="audio-player-4" src="../audio/villa_kunterbunt_deepdive_podcast.mp3"
                         preload="metadata"></audio>
-                </div>
-                <div style="margin-top: 15px; text-align: right;">
-                    <a href="deepdive.html" class="action-link">Zur Folge</a>
+                    <div style="margin-top: 15px; text-align: right;">
+                        <a href="deepdive.html" class="action-link">Zur Folge</a>
+                    </div>
                 </div>
             </article>
 
@@ -858,7 +862,8 @@
                             <img src="../images/thumbs/die_villa_kunterbunt_podcast_thumb.png" alt="Front Cover">
                         </div>
                         <div class="back">
-                            <img src="../images/thumbs/die_villa_kunterbunt_abook_cover_back_thumb.png" alt="Back Cover">
+                            <img src="../images/thumbs/die_villa_kunterbunt_abook_cover_back_thumb.png"
+                                alt="Back Cover">
                         </div>
                     </div>
                 </div>
@@ -920,9 +925,9 @@
                     </div>
                     <audio id="audio-player-5" src="../audio/villa_kunterbunt_zupftest_podcast.mp3"
                         preload="metadata"></audio>
-                </div>
-                <div style="margin-top: 15px; text-align: right;">
-                    <a href="zupftest.html" class="action-link">Zur Folge</a>
+                    <div style="margin-top: 15px; text-align: right;">
+                        <a href="zupftest.html" class="action-link">Zur Folge</a>
+                    </div>
                 </div>
             </article>
 
@@ -934,7 +939,8 @@
                             <img src="../images/thumbs/die_villa_kunterbunt_podcast_thumb.png" alt="Front Cover">
                         </div>
                         <div class="back">
-                            <img src="../images/thumbs/die_villa_kunterbunt_abook_cover_back_thumb.png" alt="Back Cover">
+                            <img src="../images/thumbs/die_villa_kunterbunt_abook_cover_back_thumb.png"
+                                alt="Back Cover">
                         </div>
                     </div>
                 </div>
@@ -996,9 +1002,9 @@
                     </div>
                     <audio id="audio-player-6" src="../audio/villa_kunterbunt_die_studie_podcast.mp3"
                         preload="metadata"></audio>
-                </div>
-                <div style="margin-top: 15px; text-align: right;">
-                    <a href="systemanalyse.html" class="action-link">Zur Folge</a>
+                    <div style="margin-top: 15px; text-align: right;">
+                        <a href="systemanalyse.html" class="action-link">Zur Folge</a>
+                    </div>
                 </div>
             </article>
 
@@ -1010,7 +1016,8 @@
                             <img src="../images/thumbs/die_villa_kunterbunt_podcast_thumb.png" alt="Front Cover">
                         </div>
                         <div class="back">
-                            <img src="../images/thumbs/die_villa_kunterbunt_abook_cover_back_thumb.png" alt="Back Cover">
+                            <img src="../images/thumbs/die_villa_kunterbunt_abook_cover_back_thumb.png"
+                                alt="Back Cover">
                         </div>
                     </div>
                 </div>
@@ -1071,9 +1078,9 @@
                     </div>
                     <audio id="audio-player-7" src="../audio/villa_kunterbunt_korrespondenz_epos.mp3"
                         preload="metadata"></audio>
-                </div>
-                <div style="margin-top: 15px; text-align: right;">
-                    <a href="korrespondenz_epos.html" class="action-link">Zur Folge</a>
+                    <div style="margin-top: 15px; text-align: right;">
+                        <a href="korrespondenz_epos.html" class="action-link">Zur Folge</a>
+                    </div>
                 </div>
             </article>
 
