fix(ui): force width 100% on zur folge button containers

--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -616,7 +616,7 @@
                     </div>
                     <audio id="audio-player-1" src="../audio/villa_kunterbunt_satire_podcast.mp3"
                         preload="metadata"></audio>
-                    <div style="margin-top: 15px; text-align: right;">
+                    <div style="margin-top: 15px; text-align: right; width: 100%;">
                         <a href="satire.html" class="action-link">Zur Folge</a>
                     </div>
                 </div>
@@ -693,7 +693,7 @@
                     </div>
                     <audio id="audio-player-2" src="../audio/villa_kunterbunt_analyse_podcast.mp3"
                         preload="metadata"></audio>
-                    <div style="margin-top: 15px; text-align: right;">
+                    <div style="margin-top: 15px; text-align: right; width: 100%;">
                         <a href="analyse.html" class="action-link">Zur Folge</a>
                     </div>
                 </div>
@@ -771,7 +771,7 @@
                     </div>
                     <audio id="audio-player-3" src="../audio/villa_kunterbunt_dossier_podcast.mp3"
                         preload="metadata"></audio>
-                    <div style="margin-top: 15px; text-align: right;">
+                    <div style="margin-top: 15px; text-align: right; width: 100%;">
                         <a href="dossier.html" class="action-link">Zur Folge</a>
                     </div>
                 </div>
@@ -848,7 +848,7 @@
                     </div>
                     <audio id="audio-player-4" src="../audio/villa_kunterbunt_deepdive_podcast.mp3"
                         preload="metadata"></audio>
-                    <div style="margin-top: 15px; text-align: right;">
+                    <div style="margin-top: 15px; text-align: right; width: 100%;">
                         <a href="deepdive.html" class="action-link">Zur Folge</a>
                     </div>
                 </div>
@@ -925,7 +925,7 @@
                     </div>
                     <audio id="audio-player-5" src="../audio/villa_kunterbunt_zupftest_podcast.mp3"
                         preload="metadata"></audio>
-                    <div style="margin-top: 15px; text-align: right;">
+                    <div style="margin-top: 15px; text-align: right; width: 100%;">
                         <a href="zupftest.html" class="action-link">Zur Folge</a>
                     </div>
                 </div>
@@ -1002,7 +1002,7 @@
                     </div>
                     <audio id="audio-player-6" src="../audio/villa_kunterbunt_die_studie_podcast.mp3"
                         preload="metadata"></audio>
-                    <div style="margin-top: 15px; text-align: right;">
+                    <div style="margin-top: 15px; text-align: right; width: 100%;">
                         <a href="systemanalyse.html" class="action-link">Zur Folge</a>
                     </div>
                 </div>
@@ -1078,7 +1078,7 @@
                     </div>
                     <audio id="audio-player-7" src="../audio/villa_kunterbunt_korrespondenz_epos.mp3"
                         preload="metadata"></audio>
-                    <div style="margin-top: 15px; text-align: right;">
+                    <div style="margin-top: 15px; text-align: right; width: 100%;">
                         <a href="korrespondenz_epos.html" class="action-link">Zur Folge</a>
                     </div>
                 </div>
