--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -422,7 +422,7 @@
                     </div>
                     <audio id="audio-player-1" src="../audio/villa_kunterbunt_korrespondenz_system_analyse.mp3"
                         preload="metadata"></audio>
-                    <div style="margin-top: 15px; text-align: right;">
+                    <div style="margin-top: 15px; text-align: right; width: 100%;">
                         <a href="korrespondenz_system_analyse.html" class="action-link">Zur Folge</a>
                     </div>
                 </div>
