--- a/core/data/cowork/podcast/index.html
+++ b/core/data/cowork/podcast/index.html
@@ -417,7 +417,7 @@
                     </div>
                     <audio id="audio-player-1" src="../audio/villa_kunterbunt_episode_vi_abook.mp3"
                         preload="metadata"></audio>
-                    <div style="margin-top: 15px; text-align: right;">
+                    <div style="margin-top: 15px; text-align: right; width: 100%;">
                         <a href="abook.html" class="action-link">Zur Folge</a>
                     </div>
                 </div>
