--- a/core/data/cowork/podcast/index.html
+++ b/core/data/cowork/podcast/index.html
@@ -12,12 +12,13 @@
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Inter:wght@300;400;500;600&display=swap"
         rel="stylesheet">
     <style>
-        /* Reusing styles from main podcast page */
         :root {
             --bg-dark: #0f1115;
             --text-main: #ffffff;
             --text-muted: #a0a0a0;
             --accent-gold: #d4af37;
+            /* Noble gold accent */
+            --accent-gold-dim: #aa8c2c;
             --glass-bg: rgba(20, 20, 20, 0.75);
             --glass-border: rgba(255, 255, 255, 0.08);
             --glass-highlight: rgba(255, 255, 255, 0.03);
@@ -37,6 +38,7 @@
             overflow-x: hidden;
         }
 
+        /* Ambient Background */
         .ambient-bg {
             position: fixed;
             top: 0;
@@ -59,6 +61,7 @@
             box-sizing: border-box;
         }
 
+        /* Header Section */
         header {
             text-align: center;
             margin-bottom: 40px;
@@ -86,29 +89,44 @@
             letter-spacing: 1px;
         }
 
+        /* Episode List */
         .episode-list {
             display: flex;
             flex-direction: column;
             gap: 40px;
         }
 
+        /* Episode Card */
         .episode-card {
             background: var(--glass-bg);
             backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
             border: 1px solid var(--glass-border);
             border-radius: 20px;
             padding: 24px;
             box-shadow: var(--shadow-soft);
             display: grid;
             grid-template-columns: 160px 1fr;
+            /* Image left, content right */
             gap: 20px;
-            transition: transform 0.3s ease;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
             position: relative;
             overflow: hidden;
         }
 
+        .episode-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 1px;
+            background: linear-gradient(90deg, transparent, var(--glass-highlight), transparent);
+        }
+
         .episode-card:hover {
             transform: translateY(-5px);
+            box-shadow: 0 20px 60px -15px rgba(0, 0, 0, 0.6);
             border-color: rgba(255, 255, 255, 0.15);
         }
 
@@ -194,11 +212,13 @@
             margin-bottom: 16px;
         }
 
+        /* Player Controls */
         .player-controls {
             display: flex;
             align-items: center;
             gap: 20px;
             margin-top: auto;
+            flex-wrap: wrap;
         }
 
         .play-btn {
@@ -245,6 +265,24 @@
             position: relative;
         }
 
+        .progress-fill::after {
+            content: '';
+            position: absolute;
+            right: -4px;
+            top: -3px;
+            width: 10px;
+            height: 10px;
+            background: white;
+            border-radius: 50%;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+            opacity: 0;
+            transition: opacity 0.2s;
+        }
+
+        .progress-bar-bg:hover .progress-fill::after {
+            opacity: 1;
+        }
+
         .time-display {
             font-size: 0.75rem;
             color: var(--text-muted);
@@ -253,13 +291,19 @@
             font-variant-numeric: tabular-nums;
         }
 
+        /* Responsive */
         @media (max-width: 650px) {
             .episode-card {
                 grid-template-columns: 1fr;
                 text-align: center;
+                gap: 20px;
             }
 
             .cover-art {
+                width: 100%;
+                max-width: 250px;
+                height: auto;
+                aspect-ratio: 1/1;
                 margin: 0 auto;
             }
 
@@ -290,6 +334,30 @@
             color: var(--accent-gold);
         }
 
+        .action-link {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 8px 16px;
+            background: rgba(212, 175, 55, 0.15);
+            border: 1px solid rgba(212, 175, 55, 0.3);
+            border-radius: 20px;
+            color: var(--accent-gold);
+            font-size: 0.85rem;
+            font-weight: 500;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            transition: all 0.2s ease;
+            text-decoration: none;
+        }
+
+        .action-link:hover {
+            background: rgba(212, 175, 55, 0.3);
+            box-shadow: 0 0 15px rgba(212, 175, 55, 0.2);
+            transform: translateY(-1px);
+            color: #fff;
+        }
+
+        /* Animations */
         @keyframes fadeInDown {
             from {
                 opacity: 0;
@@ -314,27 +382,146 @@
             }
         }
 
-        .action-link {
-            display: inline-block;
-            margin-top: 10px;
-            padding: 8px 16px;
-            background: rgba(212, 175, 55, 0.15);
-            border: 1px solid rgba(212, 175, 55, 0.3);
-            border-radius: 20px;
-            color: var(--accent-gold);
-            font-size: 0.85rem;
-            font-weight: 500;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            transition: all 0.2s ease;
-            text-decoration: none;
+        .fade-in-up {
+            animation: fadeInUp 0.8s ease-out forwards;
+            opacity: 0;
+            /* Valid initial state for animation */
         }
 
-        .action-link:hover {
-            background: rgba(212, 175, 55, 0.3);
-            box-shadow: 0 0 15px rgba(212, 175, 55, 0.2);
-            transform: translateY(-1px);
-            color: #fff;
+        .delay-1 {
+            animation-delay: 0.2s;
+        }
+
+        .delay-2 {
+            animation-delay: 0.4s;
+        }
+
+        /* Info & Source Buttons */
+        .info-bar {
+            display: flex;
+            gap: 15px;
+            margin-bottom: 20px;
+            flex-wrap: wrap;
+        }
+
+        .info-btn {
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid var(--glass-border);
+            color: var(--text-muted);
+            padding: 6px 12px;
+            border-radius: 4px;
+            font-size: 0.75rem;
+            cursor: pointer;
+            transition: all 0.2s;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .info-btn:hover {
+            background: rgba(255, 255, 255, 0.1);
+            color: var(--text-main);
+        }
+
+        .info-btn.source-btn.no-source {
+            background: rgba(255, 50, 50, 0.15);
+            border-color: rgba(255, 50, 50, 0.3);
+            color: rgba(255, 100, 100, 0.8);
+            cursor: default;
+        }
+
+        .info-btn.source-btn.has-source:hover {
+            background: rgba(212, 175, 55, 0.15);
+            border-color: rgba(212, 175, 55, 0.3);
+            color: var(--accent-gold);
+        }
+
+        .info-text {
+            display: none;
+            background: rgba(0, 0, 0, 0.3);
+            padding: 15px;
+            border-radius: 8px;
+            font-size: 0.85rem;
+            line-height: 1.5;
+            color: var(--text-muted);
+            margin-bottom: 20px;
+            border-left: 3px solid var(--accent-gold);
+            animation: fadeIn 0.3s ease;
+        }
+
+        .info-text.visible {
+            display: block;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-5px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Enhanced Player Controls */
+        .control-btn {
+            background: transparent;
+            border: none;
+            color: var(--text-muted);
+            cursor: pointer;
+            padding: 5px;
+            transition: color 0.2s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .control-btn:hover {
+            color: var(--text-main);
+        }
+
+        .volume-control {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            margin-left: 10px;
+        }
+
+        .volume-slider {
+            -webkit-appearance: none;
+            width: 80px;
+            height: 4px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 2px;
+            outline: none;
+        }
+
+        .volume-slider::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            width: 12px;
+            height: 12px;
+            background: var(--text-muted);
+            border-radius: 50%;
+            cursor: pointer;
+            transition: background 0.2s;
+        }
+
+        .volume-slider:hover::-webkit-slider-thumb {
+            background: var(--accent-gold);
+        }
+
+        /* SEO Cloak */
+        .seo-cloud {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            padding: 0;
+            margin: -1px;
+            overflow: hidden;
+            clip: rect(0, 0, 0, 0);
+            white-space: nowrap;
+            border: 0;
         }
     </style>
 </head>
@@ -359,7 +546,7 @@
                 <div class="cover-flip-container" onclick="this.classList.toggle('flipped')">
                     <div class="flipper">
                         <div class="front">
-                            <img src="../images/thumbs/die_villa_kunterbunt_anthologie_podcast_thumb.png"
+                            <img src="../images/thumbs/die_villa_kunterbunt_anthologie_audiobook_cover_front_thumb.png"
                                 alt="Front Cover">
                         </div>
                         <div class="back">
