--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -220,6 +220,7 @@
             align-items: center;
             gap: 20px;
             margin-top: auto;
+            flex-wrap: wrap;
         }
 
         .play-btn {
