Harmonize Podcast UI: responsive volume slider centering

--- a/core/data/cowork/podcast/index.html
+++ b/core/data/cowork/podcast/index.html
@@ -313,6 +313,12 @@
 
             .player-controls {
                 width: 100%;
+                justify-content: center;
+            }
+
+            .volume-control {
+                margin-left: 0;
+                margin-top: 10px;
             }
         }
 
