--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -315,6 +315,12 @@
 
             .player-controls {
                 width: 100%;
+                justify-content: center;
+            }
+
+            .volume-control {
+                margin-left: 0;
+                margin-top: 10px;
             }
         }
 
