--- a/core/data/main/podcast/systemanalyse.html
+++ b/core/data/main/podcast/systemanalyse.html
@@ -130,6 +130,7 @@
         }
 
         .cover-art {
+            /* Fallback or if reused class needed */
             width: 200px;
             height: 200px;
             border-radius: 12px;
@@ -140,6 +141,51 @@
 
         .cover-art:hover {
             transform: scale(1.02);
+        }
+
+        /* Flip Card Styles */
+        .cover-flip-container {
+            width: 200px;
+            height: 200px;
+            perspective: 1000px;
+            cursor: pointer;
+            margin-bottom: 20px;
+        }
+
+        .flipper {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            transition: transform 0.6s;
+            transform-style: preserve-3d;
+        }
+
+        .cover-flip-container:hover .flipper,
+        .cover-flip-container.flipped .flipper {
+            transform: rotateY(180deg);
+        }
+
+        .front,
+        .back {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            -webkit-backface-visibility: hidden;
+            border-radius: 12px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
+        }
+
+        .front img,
+        .back img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 12px;
+        }
+
+        .back {
+            transform: rotateY(180deg);
         }
 
         .episode-tag {
